--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     defaults:
       run:
         working-directory: app
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Java 17
         uses: actions/setup-java@v4
@@ -23,5 +23,8 @@ jobs:
           java-version: "17"
           cache: maven
 
-      - name: Build and Test
-        run: ./mvnw clean verify
+      - name: Make mvnw executable
+        run: chmod +x mvnw
+
+      - name: Build & Test
+        run: ./mvnw -B clean verify
